[package]
name = "lyriek"
version = "0.1.0"
authors = ["Bart Willems <bwillems@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk-pixbuf = "0.7.0"
gtk = "0.7.0"
relm = "0.17.0"
relm-derive = "0.17.0"
reqwest = "0.9.20"
serde = "1.0"
serde_derive = "1.0"
mpris = "1.1"
url = "2.1"
log = "0.4.8"
env_logger = "0.6.2"
v_htmlescape = "0.4.5"
rust-embed = "5.1"

[profile.release]
lto = true
