[package]
name = "lyriek"
version = "0.1.0"
authors = ["Bart Willems <bwillems@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
env_logger = "0.7.1"
gdk-pixbuf = "0.9.0"
gtk = "0.9.2"
log = "0.4"
mpris = "1.1"
relm = "0.20.0"
relm-derive = "0.20.0"
reqwest = { features = ["blocking", "json"], version = "0.10" }
rust-embed = "5.6.0"
serde = "1.0"
serde_derive = "1.0"
url = "2.1"
v_htmlescape = "0.10.0"

[profile.release]
lto = true
