[package]
name = "lyriek"
version = "0.2.0"
authors = ["Bart Willems <bwillems@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gui-gtk"]
gui-gtk = ["gtk", "gdk-pixbuf", "relm", "relm-derive"]
gui-iced = []

[dependencies]
derive_more = "0.99"
env_logger = "0.7.1"
log = "0.4"
mpris = "1.1"
reqwest = { features = ["blocking", "json"], version = "0.11" }
serde = "1.0"
serde_derive = "1.0"
url = "2.1"
v_htmlescape = "0.10.0"

gdk-pixbuf = { version = "0.9", optional = true}
gtk = { version = "0.9", optional = true}
relm = { version = "0.20", optional = true}
relm-derive = { version = "0.20", optional = true}


[profile.release]
lto = true
